jabref: auto updated to 5.10-1